style.css
@import url('https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap');
:root {
    --ffamily: 'Space Mono', monospace;
    --font-size: 13px;
    --light-blue: #4B6A9B;
    --dark-blue: #2B3442;
    --blue: #0079FF;
    --btn-hover: #699dd8;
    --grayish-blue: #697C9A;
    --gray: #D7DCEF;
    --light-gray: #F6F8FF;
    --white: #fefefe;
    --basic-white: #fff;
    --devfinder: #222731;
    --error: rgb(238, 0, 0);
    --shadow:  0px 16px 30px -10px rgba(32, 31, 31, 0.2);
}

* {
    margin: 0;
    padding: 0;
    font-family: var(--ffamily);
}

body {
    font-size: var(--font-size);
    background-color: var(--light-gray);
    color: var(--light-blue);
}

section {
    width: 50%;
    margin: auto;
}

.title {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 10rem;
    height: 80px;
}

h3 {
    font-weight: bold;
    font-size: 26px;
    line-height: 39px;
    color: var(--devfinder);
}

#btn-change {
    display: flex;
    justify-content: space-between;
    align-items: center;
    letter-spacing: 2.5px;
    font-weight: 700;
    width: 75px;
    height: 40px;
    text-transform: uppercase;
}

#btn-change:hover {
    cursor: pointer;
    color: var(--devfinder);
}

.search-bar {
    background-color: var(--white);
    background-image: url(assets/icon-search.svg);
    background-position-x: 15px;
    background-position-y: center;
    background-repeat: no-repeat;
    border-radius: 15px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 60px;
    margin-top: 15px;
    box-shadow: var(--shadow);
}

.search-bar > label {
    flex: 1;
}

#input {
    border: none;
    background: none;
    outline: none;
    color: var(--light-blue);
    height: 100%;
    width: 100%;
    padding-left: 3rem;
    padding-top: 0.3rem;
    cursor: pointer;
    font-size: 18px;
    line-height: 25px;
}

#input::placeholder {
    color: var(--light-blue);
    font-size: 18px;
    line-height: 25px;
    font-weight: normal;

}

.search {
    background: var(--blue);
    border-radius: 10px;
    color: var(--basic-white);
    font-weight: bold;
    font-size: 16px;
    line-height: 24px;
    border: none;
    height: 75%;
    min-width: 87px;
    margin-right: 1rem;
}

.search:hover {
    background: var(--btn-hover);
    cursor: pointer;
}

.error {
    position: absolute;
}

#no-results {
    position: relative;
    color: var(--error);
    font-weight: bold;
    margin-left: 40rem;
    display: none;
}

.card {
    background-color: var(--white);
    border-radius: 15px;
    margin-top: 26px;
    box-shadow: var(--shadow);
}

.content {
    width: 85%;
    min-height: 400px;
    margin: auto;
    display: flex;
    flex-direction: row;
    padding-top: 2em;
}

.right-content {
    display: flex;
    flex-direction: column;
    flex: 1;
}

#avatar{
    width: 130px;
    height: 130px;
    border-radius: 90px;
}

.profile-name {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.profile-name h2 {
    font-size: 26px;
    line-height: 39px;
    font-weight: bold;
    color: var(--dark-blue);
}

#username {
    color: var(--blue);
    font-size: 16px;
    line-height: 24px;
}

.info {
    display: flex;
    flex-direction:row;
    justify-content: space-between;
    max-height: 70px;
    margin-left: 20px;
    padding-top: 2em;
}

#about {
    line-height: 25px;
    margin-left: 1.5em;
    padding-top: 1em;
}

.profile-status {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    background-color: var(--light-gray);
    border-radius: 10px;
    text-align: center;
    margin-top: 7em;
}

.status {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 85px;
}

.status-title {
    font-size: 13px;
    line-height: 19px;
    color: var(--light-blue);
}

.value {
    font-weight: bold;
    font-size: 22px;
    line-height: 33px;
    font-weight: bold;
    color: var(--dark-blue);
}

.profile-links {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    padding-top: 2em;
}

.first-links {
    display: flex;
    flex-direction: column;
}

.second-links {
    display: flex;
    flex-direction: column;
}

#date {
    font-size: 15px;
    line-height: 22px;
}

.links {
    display: flex;
    margin-top: 0.5rem;
}

.links p {
    margin-left: 14px;
    font-size: 15px;
    line-height: 22px;
}

@media (max-width: 1294px) {
    section {
        width: 75%;
    }

    .content {
        flex-direction: column;
    }
}

@media (max-width: 523px) {
    section {
        width: 90%;
    }

    .info {
        flex-direction: column;
    }

    .profile-status {
        margin-top: 4em;
    }

    .profile-links {
        flex-direction: column;
    }
}

